# scemas-platform

./: .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  CONTRIBUTIONS.md  Cargo.toml  Dockerfile  FILETREE.md  README.md  docker-compose.yml  flake.nix  package.json  progress.md  turbo.json
.github/: README.md
.github/workflows/: deploy.yml  desktop-sync-check.yml  desktop.yml
crates/scemas-alerting/: Cargo.toml
crates/scemas-alerting/src/: blackboard.rs  controller.rs  dispatcher.rs  evaluator.rs  lib.rs  lifecycle.rs
crates/scemas-cli/: Cargo.toml
crates/scemas-cli/src/: main.rs  reload.rs  seed.rs
crates/scemas-core/: Cargo.toml  build.rs
crates/scemas-core/src/: config.rs  error.rs  models.rs  regions.catalog.json  regions.rs
crates/scemas-desktop/: Tauri.toml
crates/scemas-desktop/src/: main.rs  postgres.rs  sync.rs  tray.rs
crates/scemas-server/: Cargo.toml
crates/scemas-server/src/: access.rs  distribution.rs  main.rs  routes.rs  state.rs
crates/scemas-telemetry/: Cargo.toml
crates/scemas-telemetry/src/: controller.rs  health.rs  ingest.rs  lib.rs  validate.rs
data/: hamilton-monitoring-regions.json  hamilton-sensor-catalog.json  hamilton-sensors.json  zones.json
docs/: D1.md  D2.md  README.md  architecture.md  codebase.md  patterns.md
docs/diagrams/: access_manager_controller.puml  acknowledge_critical_env.puml  alerting_management_controller.puml  class_diagram.puml  data_distribution_management_controller.puml  define_alert_rule.puml  encryption_manager.puml  request_environmental_data.puml  signup_and_login.puml
docs/runbooks/: README.md  alerting-evaluation-failure.md  ingestion-failure.md  public-api-latency-degradation.md
scripts/: generate-monitoring-network.ts  seed.ts  start-scemas.sh  webhook-echo.ts
