[workspace]
resolver = "2"
members = [
    "crates/scemas-core",
    "crates/scemas-telemetry",
    "crates/scemas-alerting",
    "crates/scemas-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# web
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"

# error handling
thiserror = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# config
dotenvy = "0.15"

# crypto
sha2 = "0.10"
rand = { version = "0.9", features = ["os_rng"] }
base64 = "0.22"

# http client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
