[package]
name = "scemas-alerting"
version.workspace = true
edition.workspace = true

[dependencies]
scemas-core = { path = "../scemas-core" }
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
