[package]
name = "scemas-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "scemas"
path = "src/main.rs"

[dependencies]
scemas-core = { path = "../scemas-core" }
scemas-server = { path = "../scemas-server" }
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
rand.workspace = true
